# homeschool

./: .bandit.yaml  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CD.md  Dockerfile  LICENSE  Makefile  Procfile  Procfile.dev  Procfile.local  README.md  _vimrc_local.vim  config.toml  cspell.json  docker-compose.yml  manage.py  mise.toml  mypy.ini  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml  known_hosts
.github/workflows/: deploy.yml  tests.yaml
.kamal/: secrets
.kamal/hooks/: docker-setup  pre-deploy
blog/: config.toml
config/: deploy.yml
docs/: Makefile  conf.py  courses.rst  faq.rst  features.rst  index.rst  referrals.rst  school-years.rst  terminology.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/comparisons/: google-classroom.rst  homeschool-day-book.rst  homeschool-helper.rst  homeschool-manager.rst  homeschool-minder.rst  homeschool-planet.rst  homeschool-reporting-online.rst  homeschool-skedtrack.rst  homeschool-tracker.rst  homeschooling-records.rst  lessontrek.rst  my-school-year.rst  scholaric.rst  simply-charlotte-mason.rst
frontend/: package-lock.json  package.json  playwright.config.js  tailwind.config.js
frontend/e2e/: public.spec.js
hashid_field/: __init__.py  conf.py  descriptor.py  field.py  hashid.py  lookups.py  rest.py
homeschool/: custom_typing.py  middleware.py  test.py
homeschool/accounts/: admin.py  apps.py  constants.py  forms.py  middleware.py  models.py  office_urls.py  stripe_gateway.py  subscriptions_urls.py  tasks.py  turnstile.py  views.py
homeschool/core/: admin.py  apps.py  compatibility.py  converters.py  forms.py  models.py  office_dashboard_urls.py  schedules.py  site.py  sitemaps.py  slack_gateway.py  start_urls.py  tasks.py  urls.py  view_helpers.py  views.py
homeschool/courses/: admin.py  apps.py  authorizers.py  exceptions.py  forms.py  mixins.py  models.py  urls.py  views.py
homeschool/denied/: authorizers.py  decorators.py  middleware.py
homeschool/notifications/: admin.py  apps.py  models.py  urls.py  views.py
homeschool/referrals/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
homeschool/reports/: admin.py  apps.py  contexts.py  models.py  office_urls.py  pdfs.py  tasks.py  urls.py  views.py
homeschool/schools/: admin.py  apps.py  authorizers.py  constants.py  exceptions.py  forecaster.py  forms.py  models.py  report_urls.py  urls.py  views.py  year_calendar.py
homeschool/sentry/: apps.py
homeschool/students/: admin.py  apps.py  authorizers.py  exceptions.py  forms.py  mixins.py  models.py  urls.py  views.py
homeschool/teachers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
homeschool/users/: admin.py  apps.py  forms.py  models.py  settings_urls.py  views.py
project/: admin.py  apps.py  settings.py  testing_settings.py  urls.py
static/: print.css
static/favicon/: site.webmanifest
staticfiles/: print.css
templates/: 403.html  404.html  500.html  app_base.html  base.html  nav.html  print_link.html  sub_nav.html
templates/account/: base.html  login.html  signup.html  verification_sent.html
templates/accounts/: check_email.html  customer_detail.html  customers_dashboard.html  signin.html  subscriptions_index.html  subscriptions_stripe_cancel.html  subscriptions_success.html  trial_banner.html
(+213 files in other folders)
